﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$HeadURL$

2006-12-05 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: Grant all privileges on wildcard name: we should
      really grant on username\_ instead of username_

2006-12-05 Michal Čihař  <michal@cihar.com>
    * server_privileges.php: Add IF NOT EXISTS to CREATE DATABASE query (RFE
      #1608372), reload navigation after creating database.
    * server_privileges.php: Use correct links (patch #1607236).

2006-12-04 Marc Delisle  <lem9@users.sourceforge.net>
    * db_structure.php, bug #1605985, missing HTML tag

2006-11-29 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/spanish update, thanks to Daniel Hinostroza
    * sql.php, libraries/display_tbl.lib.php: patch #1605032, checks for
      undefined index, thanks to Arpad Borsos

2006-11-26 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_structure.php: bug #1602335, browse distinct values
      and name containing a quote
    * libraries/bookmark.lib.php: bug #1579701: error listing bookmarks
      when dropping a table and no pmadb

2006-11-24 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php, Documentation.html: users can now toggle the display
      of the Function column from the interface

2006-11-23 Marc Delisle  <lem9@users.sourceforge.net>
    * pmd/scripts/move.js: fix a few js errors
    * pmd*.php: remove unneeded calls to getRelationsParam(); 
      verify if the internal relations are enabled before trying to
      create one

2006-11-22 Marc Delisle  <lem9@users.sourceforge.net>
    * Designer: get rid of pmd_config.php and pmd_get_info.php,
      rename pmd_session.php to pmd_common.php
    * Designer: missing messages

2006-11-21 Marc Delisle  <lem9@users.sourceforge.net>
    * pmd_general.php, lang/*: added $strHelp

2006-11-20 Marc Delisle  <lem9@users.sourceforge.net>
    * french updates
    * remove references to phpMyDesigner.net, asked by Ivan